--- a/Intro.toUmbrella/styles/stylesheet-1.css
+++ b/Intro.toUmbrella/styles/stylesheet-1.css
@@ -1,3 +1,5 @@
 @charset "UTF-8";
 /* CSS Document */
-
+body { margin:0; padding:0;}
+#home { background-color: yellow;} 
+.wrapper {background-color: #5AC1FF; max-width:1170px; margin-top:0; margin-bottom:0; margin-right: auto; margin-left:auto;}
