--- a/Intro.toUmbrella/styles/stylesheet-1.css
+++ b/Intro.toUmbrella/styles/stylesheet-1.css
@@ -6,7 +6,7 @@
 /* Body */
 body {margin:0; padding: 0 }
 
-
+body {margin:0; padding: 0 }
 
 /* Navigations */
 nav li {float: left; display: inline;
