--- a/Intro.toUmbrella/styles/stylesheet-1.css
+++ b/Intro.toUmbrella/styles/stylesheet-1.css
@@ -13,12 +13,11 @@ body, h1, h2, nav, header, ul, li {margin: 0;padding: 0;}
 }
 
 /* Navigations */
-nav li {float: left; display: inline;
-list-style-type: none; padding:0;}
+nav li {float: left; display: inline; list-style-type: none; padding:0;}
 
 nav {width:40%; float: right; padding-top: 38px;}
 
-nav a {color: gray; display: block; width:50px; padding-right: 20px; text-decoration: none; font-weight: 700;}
+nav a {color: gray; display: block; width:50px; padding-right: 70px; text-decoration: none;}
 
 nav a:hover {color:black;}
 
@@ -84,6 +83,7 @@ blockquote {line-height : 25px; font-size: 14px; text-align: center; padding-bot
 .clear{zoom:1;}
 
 .clear:before, .clear:after{content:""; display:table;}
+
 .clear:after{clear:both;}
 
 .contact ul {padding-bottom: 40px;}
@@ -112,7 +112,13 @@ blockquote {line-height : 25px; font-size: 14px; text-align: center; padding-bot
 
 .pe-7s-umbrella {padding-right: 5px;}
 
+.show-reel{text-align: center; font-size: 20px;}
 
+.social-network img:hover {padding: .5;}
+
+.social-network li {padding-bottom: 20px;}
+
+.social-network ul {width:10%; padding-top:300px; color:white; overflow: auto;}
 
 
 
@@ -149,7 +155,7 @@ a.button{border:3px solid #000; padding:15px 30px; text-decoration: none; color:
 
 #home .wrapper {position: relative; min-height:780px;}
 
-#home ul {padding-bottom: 35px;}
+#home ul {padding-bottom: 20px;}
 
 #home li {font-size: 12px;}
 
@@ -157,7 +163,7 @@ a.button{border:3px solid #000; padding:15px 30px; text-decoration: none; color:
   
 #contact img{float: right;}
 
-#contact input{width: 570px; border: 0px solid #000000; border-bottom-width: 1px; background-color: transparent;}
+#contact input{width: 570px; border: 0px solid #000000; border-bottom-width: 1px; background-color:transparent;}
 
 #featuredin img{padding-top: 200px; padding-left: 60px;}
 
@@ -227,151 +233,6 @@ ul{list-style: none;}
 
 
 
-
-
-
-
-.fade {
-	opacity: .5;
-
-#contact {
-	padding-top: 100px;
-	border-bottom: solid 2px;
-	border-bottom-color: yellow;
-}
-
-.contact-info {
-	float: left;
-	width: 45%;
-	margin-top: 100px;
-}
-
-#contact img {
-	float: right;
-}
-
-#contact button {
-	padding-top: 40px;
-}
-
-.contact-info input {
-	padding: 25px 0;
-	color: gray;
-	width: 570px;
-	border: 0px solid #000000;
-    border-bottom-width: 1px;
-	border-bottom-color: #cccccc;
-    background-color: transparent;
-}
-
-.contact-info input:focus {
-	outline: 0;
-}
-
-#contact a, #contact button {
-	color: black;
-	border: none;
-	text-decoration: none;
-	background-color: transparent;
-  font-size: 20px;
-}
-
-#contact a:hover {
-	opacity: .5;
-}
-
-.social-network ul {
-	width: 10%;
-	padding-top: 225px;
-	color: white;
-	overflow: auto;
-}
-
-.social-network li {
-	padding-bottom: 20px;
-}
-
-.social-network img:hover {
-	opacity: .5;
-}
-
-.pe-7s-mail {
-	padding-right: 5px;
-}
-
-
-footer {
-	padding-top: 150px;
-	clear: both;
-}
-
-.clear:before, .clear:after{
-    content:"";
-    display:table;
-}
-
-.clear:after{
-    clear:both;
-}
-
-.clear{
-    zoom:1;
-}    
-
-.form-wrapper {
-    width: 100%;
-    border-radius: 3px 0 0 3px;
-    border:2px solid #ccc;
-}
-
-.form-wrapper input {
-    padding: 10px 5px;
-    float: left;   
-    border: 0;    
-}
-
-.form-wrapper input:focus {
-    outline: 0;
-}
-
-.form-wrapper button {
-    width:15%;
-    overflow: visible;
-    position: relative;
-    float: right;
-    border: 0;
-    padding: 10px;
-    cursor: pointer;
-    color: #ccc;
-    text-transform: uppercase;
-    background:transparent;
-    
-}  
-
-.column-footer {
-	width: 25%;
-	float: left;
-	padding-right: 30px;
-}
-
-#footer-description {
-	clear: both;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 10px;
-}
-
-footer ul {
-	list-style: none;
-}
-
-.explore li {
-	float: left;
-	width: 50%;
-}
-
-footer a {
-	font-size: 10px;
-}
 
 
 
