--- a/Intro.toUmbrella/styles/stylesheet-1.css
+++ b/Intro.toUmbrella/styles/stylesheet-1.css
@@ -40,7 +40,7 @@ a {text-decoration: none;}
 /* Class's */
 .identity {float:left; padding-left: 20px; padding-top: 25px; float: left;}
 
-.wrapper {max-width: 1170px; margin: 0 auto; background-color:; overflow:auto;}
+.wrapper {max-width: 1170px; margin: 0 auto; overflow:auto;}
 
 .column-features, .column-screen{width:33%; float:left; padding-right:30px; padding-top: 80px;}
 
@@ -66,21 +66,19 @@ blockquote {line-height : 25px; font-size: 14px; text-align: center; padding-bot
 
 .blockquote .job {color: gray; font-size: 10px;}
 
-.column-about, .column-footer{background-color: ; width: 25%; float:left;}
+.column-about, .column-footer{width: 25%; float:left;}
 
 .feature-details {padding:20px; overflow: auto; cursor:pointer;}
 
 .feature-details:hover{background: #fefce9; width:100%; display:block;}
 
-.feature-details span{float:left; font size:30px; line-height: 30px; width:15%; margin-top:0;}
+.feature-details span{float:left; font-size:30px; line-height: 30px; width:15%; margin-top:0;}
 
 .feature-content{ width:85%; float:left;}
 
 .intro-title{font-size:40px;}
 
-.sect-descript{text-height:25px; font-size:12px; text-align:center;}
-
-.clear{zoom:1;}
+.sect-descript{font-size:12px; text-align:center;}
 
 .clear:before, .clear:after{content:""; display:table;}
 
@@ -94,7 +92,7 @@ blockquote {line-height : 25px; font-size: 14px; text-align: center; padding-bot
 
 .contact-info input:focus {outline: 0;}
 
-.contact a, #contact button {color: black; border: none; text-decoration: none; background-color: transparent font-size: 20px;}
+.contact a, #contact button {color: black; border: none; text-decoration: none; background-color: transparent; font-size: 20px;}
 
 .contact-info a {text-decoration: none; color:black;}
 
@@ -114,7 +112,7 @@ blockquote {line-height : 25px; font-size: 14px; text-align: center; padding-bot
 
 .show-reel{text-align: center; font-size: 20px;}
 
-.social-network img:hover {padding: .5;}
+.social-network img:hover {padding: 0;}
 
 .social-network li {padding-bottom: 20px;}
 
@@ -147,7 +145,7 @@ a.button{border:3px solid #000; padding:15px 30px; text-decoration: none; color:
 
 #gallery{background-color: #fafafa; clear: both; overflow:auto;}
 
-#home{background: #f8e514 url("http://i.imgur.com/G4zOcCO.jpg") no-repeat center; background-height: 100%; min-height: 780px;}
+#home{background: #f8e514 url("http://i.imgur.com/G4zOcCO.jpg") no-repeat center; min-height: 780px;}
 
 #home, .showreel, #featuredin {background-color:#f8e514; width:100%;}
 
@@ -159,7 +157,7 @@ a.button{border:3px solid #000; padding:15px 30px; text-decoration: none; color:
 
 #home li {font-size: 12px;}
 
-#about{background-color:: #fafafa;}
+#about{background-color: #fafafa;}
   
 #contact img{float: right;}
 
@@ -184,7 +182,7 @@ button:hover{
 	transition: all .2s ease-in-out;
 }
 
-input{width:570px; border:0px solid #000000; border-bottom-width:1px; background-color-:transparent;}
+input{width:570px; border:0px solid #000000; border-bottom-width:1px; background-color:transparent;}
 
 input{width: 100%; border: 0; border-bottom: 1px solid #ccc; padding: 25px 0; font-size: 12px;}
 
